--- a/public/blockly/index.vwf.yaml
+++ b/public/blockly/index.vwf.yaml
@@ -19,14 +19,6 @@ properties:
       navmode: walk
       translationSpeed: 1000
     children:
-      rover:
-        extends: http://vwf.example.com/node3.vwf
-        source: assets/3d/robot.dae
-        type: model/vnd.collada+xml
-        properties:
-          scale: 1
-          castShadows: true
-          receiveShadows: true
       camera:
         extends: http://vwf.example.com/camera.vwf
         properties:
@@ -35,15 +27,42 @@ properties:
           far: 100000
   makeOwnAvatarVisible: true
 children:
-  environment:
-    extends: http://vwf.example.com/node3.vwf
-    source: assets/3d/mars_terrain.DAE
-    type: model/vnd.collada+xml
+  redCube:
+    extends: http://vwf.example.com/threejs/cube.vwf
+    implements:
+    - http://vwf.example.com/animation.vwf
+    - http://vwf.example.com/node3/animation.vwf
+    - http://vwf.example.com/blockly/controller.vwf
     properties:
-      translation: [ 0, 500, -100 ]
-      scale: 1
-      castShadows: true
-      receiveShadows: true
+      meshDefinition: { "width": 100, "height": 100, "depth": 100, "color": "red" }
+      translation: [ -200, 0, 0 ]
+  greenSphere:
+    extends: http://vwf.example.com/threejs/sphere.vwf
+    implements:
+    - http://vwf.example.com/animation.vwf
+    - http://vwf.example.com/node3/animation.vwf
+    - http://vwf.example.com/blockly/controller.vwf
+    properties:
+      meshDefinition: { "radius": 50, "color": "green", "segmentsWidth": 16, "segmentsHeight": 16 }
+      translation: [ 200, 0, 0 ]
+  blueCube:
+    extends: http://vwf.example.com/threejs/cube.vwf
+    implements:
+    - http://vwf.example.com/animation.vwf
+    - http://vwf.example.com/node3/animation.vwf
+    - http://vwf.example.com/blockly/controller.vwf
+    properties:
+      meshDefinition: { "width": 100, "height": 100, "depth": 100, "color": "lightblue" }
+      translation: [ -100, -100, 0 ]
+  blueSphere:
+    extends: http://vwf.example.com/threejs/sphere.vwf
+    implements:
+    - http://vwf.example.com/animation.vwf
+    - http://vwf.example.com/node3/animation.vwf
+    - http://vwf.example.com/blockly/controller.vwf
+    properties:
+      meshDefinition: { "radius": 50, "color": "blue", "segmentsWidth": 16, "segmentsHeight": 16 }
+      translation: [ 100, 100, 0 ]
   sunLight:
     extends: http://vwf.example.com/light.vwf
     properties:
