Added model side support for raycasting in Threejs

--- a/support/proxy/vwf.example.com/scene.vwf.yaml
+++ b/support/proxy/vwf.example.com/scene.vwf.yaml
@@ -163,6 +163,14 @@ methods:
   lastActiveCameraID:
   findByID:
   isChildOf:
+  raycast:
+    parameters:
+      - origin
+      - direction
+      - near
+      - far
+      - recursive
+      - objects
 scripts:
 - |
     this.activeCameraComp = undefined;
