Refactored raycast method

--- a/support/proxy/vwf.example.com/scene.vwf.yaml
+++ b/support/proxy/vwf.example.com/scene.vwf.yaml
@@ -170,7 +170,7 @@ methods:
       - near
       - far
       - recursive
-      - objects
+      - objectIDs
 scripts:
 - |
     this.activeCameraComp = undefined;
