--- a/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
@@ -36,14 +36,22 @@ properties:
       if ( this.children[ this.moniker+"Blockly" ] ) {
         this.children[ this.moniker+"Blockly" ].transform = value;
       }
-    value: [1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1]     
+    value: [1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1]
+  blockCount:
+    set: |
+      if ( this.blockCount != value ) {
+        this.blockCount = value;
+        this.blockCountChanged( value );
+      }
+    value: 0
+  allowedBlocks: 20   
 events:
   toggleBlocklyUI:
 methods:
   getWorldXYVector:
   executeBlocklyCmd:
   createBlocklyButton:
-  blockContentChanged:
+  blockCountChanged:
 scripts:
 - |
     this.initialize = function() {
@@ -66,8 +74,8 @@ scripts:
       } );      
     }
 
-    this.blockContentChanged = function( blockCount ) {
-      console.info( "blockly.controller - blockContentChanged( "+blockCount+" )" );
+    this.blockCountChanged = function( bc ) {
+      //console.info( "blockly.controller - blockCountChanged( "+bc+" )" );
     }
 
     this.getWorldXYVector = function( x, y ) {
@@ -89,7 +97,7 @@ scripts:
 
     this.executeBlocklyCmd = function( cmd, magnitude, time ) {
 
-      console.info( "blockly.controller - executeBlocklyCmd( "+cmd+", "+magnitude+", "+time+" )" );
+      //console.info( "blockly.controller - executeBlocklyCmd( "+cmd+", "+magnitude+", "+time+" )" );
       var dir = undefined;
       var speed, angle, t;
 
