--- a/support/proxy/vwf.example.com/animation.vwf.yaml
+++ b/support/proxy/vwf.example.com/animation.vwf.yaml
@@ -122,7 +122,7 @@ properties:
         this.animationUpdate( value, this.animationDuration );
         this.animationTimeChanged( value );
       }
-      return value;
+      return value; //@ sourceURL=animation.animationTime.get.vwf
 
   ## The length of the animation in seconds.
   ## 
@@ -346,7 +346,8 @@ methods:
   animationTick: |
     if ( this.animationPlaying ) {
       // Read the time to recognize the current time and update.
-      this.animationTime;
+      // TODO: move side effects out of the getter!!! (says Kevin)
+      this.animationTime; 
       // Loop or stop after reaching the end.
       if ( this.time === this.animationStop$ ) {
         if ( this.animationLoop ) {
@@ -367,7 +368,7 @@ methods:
       } else {
         this.logger.debug( "canceling animationTick" );
       }
-    }
+    } //@ sourceURL=animation.animationTick.vwf
 
   ## `animation.vwf` calls `animationUpdate` each time `animationTime` changes. Nodes that
   ## implement `animation.vwf` should provide an `animationUpdate` method to calculate the animation
