--- a/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
@@ -23,9 +23,7 @@ properties:
   forwardSpeed: 400
   rotateSpeed: 30
   animationTime: 1
-  # needs to be moved from index.vwf.yaml, but will require additional changes
-  # will do in another branch, when this one is merged back to master
-  #executing: false
+  executing: false
   blockCount:
     set: |
       if ( this.blockCount != value ) {
