Moves the 'executing' property down to the blockly objects instead of the scene

--- a/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
@@ -24,6 +24,8 @@ properties:
   rotateSpeed: 30
   animationTime: 1
   executing: false
+  blockXml: "<xml></xml>"
+  blockCode:
   blockCount:
     set: |
       if ( this.blockCount != value ) {
