Add sourceURL to animation.vwf.yaml to trace through animationPlaying setter

--- a/support/proxy/vwf.example.com/animation.vwf.yaml
+++ b/support/proxy/vwf.example.com/animation.vwf.yaml
@@ -200,7 +200,7 @@ properties:
           this.logger.debug( "scheduling animationTick" );
           this.animationTick();
         }
-      }
+      } //@ sourceURL=animation.animationPlaying.set.vwf
 
     get: |
       return this.animationStart$ != null && this.animationPause$ == null;
