Adds events for blockly starting, executing, stopping, or erroring

--- a/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
@@ -45,6 +45,10 @@ methods:
   getWorldXYVector:
   executeBlocklyCmd:
 events:
+  blocklyStarted:
+  blocklyExecuted:
+  blocklyErrored:
+  blocklyEnded:
   blockCountChanged:
   topBlockCountChanged:
   blocklyVisibleChanged:
