Updates the event name

--- a/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
@@ -48,7 +48,7 @@ events:
   blocklyStarted:
   blocklyExecuted:
   blocklyErrored:
-  blocklyEnded:
+  blocklyStopped:
   blockCountChanged:
   topBlockCountChanged:
   blocklyVisibleChanged:
