Removes the startAll property in favor of a function

--- a/support/proxy/vwf.example.com/blockly/manager.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/manager.vwf.yaml
@@ -21,7 +21,7 @@ extends:
   http://vwf.example.com/node.vwf
 properties:
   blocklyUiNodeID:
-  executingAll: false
 methods:
+  startAllExecution:
   stopAllExecution:
   
