--- a/support/proxy/vwf.example.com/blockly/manager.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/manager.vwf.yaml
@@ -21,6 +21,7 @@ extends:
   http://vwf.example.com/node.vwf
 properties:
   blocklyUiNodeID:
+  toolbox:
 methods:
   startAllExecution:
   stopAllExecution:
