Adds blockly support to each blockly object

--- a/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
@@ -50,6 +50,8 @@ properties:
         this.allowedBlocksChanged( value );
       }
     value: 20
+  blockly_toolbox:
+  blockly_defaultXml:
 methods:
   getWorldXYVector:
 events:
