Add setGraphVisibility method

--- a/support/proxy/vwf.example.com/graph.vwf.yaml
+++ b/support/proxy/vwf.example.com/graph.vwf.yaml
@@ -11,6 +11,9 @@ properties:
   gridVisible: undefined
   renderTop: undefined
 methods:
+  setGraphVisibility:
+    parameters:
+      - visible
   graphFunction:
     parameters:
       - lineFunction
