--- a/support/proxy/vwf.example.com/graphline.vwf.yaml
+++ b/support/proxy/vwf.example.com/graphline.vwf.yaml
@@ -13,13 +13,11 @@ methods:
     parameters:
       - point
     body: |
-      var fn =  "var x = " + point[0] + 
-                ", y = " + point[1] + 
-                ", z = " + point[2] + ";\n" + 
-                this.lineFunction + ";\n" + 
-                "[ x, y, z ];";
-      point = eval( fn );
-      point[ 0 ] = point[ 0 ] || 0;
-      point[ 1 ] = point[ 1 ] || 0;
-      point[ 2 ] = point[ 2 ] || 0;
+      var x = point[0];
+      var y = point[1]; 
+      var z = point[2];
+      eval( this.lineFunction );
+      point[ 0 ] = x || 0;
+      point[ 1 ] = y || 0;
+      point[ 2 ] = z || 0;
       return point;
