Adds events for blocks being added and removed

--- a/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/controller.vwf.yaml
@@ -59,6 +59,8 @@ events:
   blocklyExecuted:
   blocklyErrored:
   blocklyStopped:
+  blocklyBlockAdded:
+  blocklyBlockRemoved:
   blocklyCodeChanged:
   topBlockCountChanged:
   blockCountChanged:
