Renamed gridScale to graphScale

--- a/support/proxy/vwf.example.com/graph.vwf.yaml
+++ b/support/proxy/vwf.example.com/graph.vwf.yaml
@@ -1,7 +1,7 @@
 ---
 extends: http://vwf.example.com/node3.vwf
 properties:
-  gridScale: undefined
+  graphScale: undefined
   gridInterval: undefined
   gridLineInterval: undefined
   gridLength: undefined
