--- a/public/graphtool/index.vwf.yaml
+++ b/public/graphtool/index.vwf.yaml
@@ -6,7 +6,7 @@ children:
   graph:
     extends: http://vwf.example.com/graph.vwf
     properties:
-      gridScale: 1
+      graphScale: 1
       gridInterval: 1
       gridLineInterval: 10
       gridLength: 100
